added validations and relationships to models

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,7 @@
-<h2>Welcome to SPEED</h2>
+<div>Welcome to <br>
+  <strong>S</strong>hipment<br>
+  <strong>P</strong>lacement &<br>
+  <strong>E</strong>ntry<br>
+  <strong>E</strong>xpediting<br>
+  <strong>D</strong>ispatch
+</div>
