--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,11 +5,25 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag    'application', media: 'all' %>
+    <%= javascript_include_tag 'application' %>
   </head>
 
   <body>
-    <%= yield %>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+          
+        <a  href="<%= root_url %>"/>Home</a>
+        <% if !logged_in? %>
+          <a  href="#">Log In</a>
+        <% else %>
+          <a  href="#">Log Out</a>
+        <% end %>
+        
+      </div>
+    </nav>
+    <div>
+      <%= yield %>
+    </div>
   </body>
 </html>
