--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,4 @@
-<div>Welcome to <br>
+<div class="WelcomeHeader">Welcome to <br>
   <strong>S</strong>hipment<br>
   <strong>P</strong>lacement &<br>
   <strong>E</strong>ntry<br>
