--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,18 +10,46 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-          
-        <a  href="<%= root_url %>"/>Home</a>
-        <% if !logged_in? %>
-          <a  href="#">Log In</a>
-        <% else %>
-          <a  href="#">Log Out</a>
-        <% end %>
-        
-      </div>
-    </nav>
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">SPEED</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li class="active"><a class="navigating" href="/">Home <span class="sr-only">(current)</span></a></li>
+            <% if logged_in? %>
+              <li><a class="navigating" href="/dispatch">Dispatch</a></li>
+              <li><a class="navigating" href="<%= shipments_path %>">Shipments</a></li>
+              <li><a class="navigating" href="<%= drivers_path %>">Drivers</a></li>
+              <li><a class="navigating" href="<%= clients_path %>">Clients</a></li>
+              <li><a class="navigating" href="<%= locations_path %>">Locations</a></li>
+              <li><a class="navigating" href="<%= vehicles_path %>">Vehicles</a></li>
+              <li><a class="navigating" href="<%= trailers_path %>">Trailers</a></li>
+              <li><a class="navigating" href="<%= shipment_invoices_path %>">Invoices</a></li>
+              <li><a class="navigating" href="<%= offices_path %>">Offices</a></li>
+              <li><a class="navigating" href="<%= users_path %>">Users</a></li>
+            <% end %>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <% if logged_in? %>
+              <li><a href="/logout">Log Out</a></li>
+            <% else %>
+              <li><a href="/login">Log In</a></li>
+            <% end %>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </div>
     <div>
       <%= yield %>
     </div>
