--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,8 @@
-<div class="WelcomeHeader">Welcome to <br>
-  <strong>S</strong>hipment<br>
-  <strong>P</strong>lacement &<br>
-  <strong>E</strong>ntry<br>
-  <strong>E</strong>xpediting<br>
-  <strong>D</strong>ispatch
+<div class="container-fluid">
+  <h4>Welcome to</h4>
+  <h1>S<small>hipment</small></h1>
+  <h1>P<small>lacement &</small></h1>
+  <h1>E<small>ntry</small></h1>
+  <h1>E<small>xpediting</small></h1>
+  <h1>D<small>ispatch</small></h1>
 </div>
