--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,34 +10,27 @@
   </head>
 
   <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
+        <a class="navbar-brand" href="#">SPEED</a>
+           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
           </button>
-          <a class="navbar-brand" href="#">SPEED</a>
-        </div>
-
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li class="active"><a class="navigating" href="/">Home <span class="sr-only">(current)</span></a></li>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active"><a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a></li>
             <% if logged_in? %>
-              <li><a class="navigating" href="/dispatch">Dispatch</a></li>
-              <li><a class="navigating" href="<%= shipments_path %>">Shipments</a></li>
-              <li><a class="navigating" href="<%= drivers_path %>">Drivers</a></li>
-              <li><a class="navigating" href="<%= clients_path %>">Clients</a></li>
-              <li><a class="navigating" href="<%= locations_path %>">Locations</a></li>
-              <li><a class="navigating" href="<%= vehicles_path %>">Vehicles</a></li>
-              <li><a class="navigating" href="<%= trailers_path %>">Trailers</a></li>
-              <li><a class="navigating" href="<%= shipment_invoices_path %>">Invoices</a></li>
-              <li><a class="navigating" href="<%= offices_path %>">Offices</a></li>
-              <li><a class="navigating" href="<%= users_path %>">Users</a></li>
+              <li class="nav-item"><a class="nav-link" href="/dispatch">Dispatch</a></li>
+              <li class="nav-item"><a class="nav-link" href="<%= shipments_path %>">Shipments</a></li>
+              <li class="nav-item"><a class="nav-link" href="<%= drivers_path %>">Drivers</a></li>
+              <li class="nav-item"><a class="nav-link" href="<%= clients_path %>">Clients</a></li>
+              <li class="nav-item"><a class="nav-link" href="<%= locations_path %>">Locations</a></li>
+              <li class="nav-item"><a class="nav-link" href="<%= vehicles_path %>">Vehicles</a></li>
+              <li class="nav-item"><a class="nav-link" href="<%= trailers_path %>">Trailers</a></li>
+              <li class="nav-item"><a class="nav-link" href="<%= shipment_invoices_path %>">Invoices</a></li>
+              <li class="nav-item"><a class="nav-link" href="<%= offices_path %>">Offices</a></li>
+              <li class="nav-item"><a class="nav-link" href="<%= users_path %>">Users</a></li>
             <% end %>
           </ul>
           <ul class="nav navbar-nav navbar-right">
@@ -48,9 +41,9 @@
             <% end %>
           </ul>
         </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </div>
-    <div>
+    </nav>
+    <br><br><br>
+    <div id="contentDisplay">
       <%= yield %>
     </div>
   </body>
