added client component, including views, controller actions, and serializers

--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -1,2 +1,4 @@
+<%= javascript_include_tag 'clients' %>
+<%= render partial: 'list' %>
 <h2>Edit Client Details</h2>
 <%= render partial: 'form', locals: {client: @client} %>
