--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -1,2 +1,4 @@
+<%= javascript_include_tag 'clients' %>
+<%= render partial: 'list' %>
 <h4>Create a new client</h4>
 <%= render partial: 'form', locals: {client: @client} %>
