--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -1,64 +1,81 @@
-<%= form_for client, html: {class:"form-horizontal"} do |f| %>
-  <% if flash[:notice] %>
-    <% flash.each do |name, msg| %>
-      <div class="alert alert-danger alert-dismissible fade in">
-      <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-      <%= msg %>
-      </div>
+<div class="row">
+  <%= form_for client do |f| %>
+    <% if flash[:notice] %>
+      <% flash[:notice].each do |msg| %>
+        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+          <%= msg %>
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+      <% end %>
+      <br>
     <% end %>
-    <br>
+    <%= f.hidden_field :id %>
+    <div class="row col-md-12">
+      <div class="col-12 justify-content-start">
+        <div class="form-group row col-md-12">
+          <div class="col-md-12">
+            <%= f.label :name, nil, class:"col-md-12 control-label" %>
+            <%= f.text_field :name, class:"form-control form-control-sm" %>
+          </div>
+        </div>
+        <h4>Billing Information</h4>
+          <div class="form-group row col-md-12">
+              <div class="col-md-12">
+                <%= f.label :qb_name, value="Account Name", class:"col-md-12 control-label" %>
+                <%= f.text_field :qb_name, class:"form-control form-control-sm" %>
+              </div>
+          </div>
+          <div class="form-group row col-md-12">
+            <div class="form-group col-md-7">
+              <%= f.label :billing_address1, value="Address", class:"col-md-7 control-label" %>
+              <%= f.text_field :billing_address1, class:"form-control form-control-sm" %>
+            </div>
+            <div class="form-group col-md-5">
+              <%= f.label :billing_address2, value="Bldg/Ste", class:"col-md-5 control-label" %>
+              <%= f.text_field :billing_address2, class:"form-control form-control-sm" %>
+            </div>
+          </div>
+        <div class="form-group row col-md-12">
+          <div class="form-group col-md-6">
+            <%= f.label :billing_city, value="City", class:"col-md-6 control-label" %>
+            <%= f.text_field :billing_city, class:"form-control form-control-sm" %>
+          </div>
+          <div class="form-group col-md-3">
+            <%= f.label :billing_state, value="State", class:"col-md-3 control-label" %>
+            <%= f.text_field :billing_state, class:"form-control form-control-sm" %>
+          </div>
+          <div class="form-group col-md-3">
+            <%= f.label :billing_zip, value="Zip", class:"col-md-3 control-label" %>
+            <%= f.text_field :billing_zip, class:"form-control form-control-sm" %>
+          </div>
+        </div>
+        <div class="form-group row col-md-12">
+          <div class="form-group col-md-6">
+            <%= f.label :billing_email, value="AR Email", class:"col-md-6 control-label" %>
+            <%= f.text_field :billing_email, class:"form-control form-control-sm" %>
+          </div>
+          <div class="form-group col-md-3">
+            <%= f.label :net_terms, value="Terms", class:"col-md-3 control-label" %>
+            <%= f.text_field :net_terms, class:"form-control form-control-sm" %>
+          </div>
+        </div>
+      </div>
+    </div>
+    <h4 class="col-md-12">Offices</h4>
+    <div class="form-group row col-md-4">
+      <div class="form-group col-md-12">
+        <%= f.collection_check_boxes :office_ids, current_user.offices, :id, :name %>
+      </div>
+    </div>
+    <div class="form-group row col-md-1">
+      <div class="form-group col-md-12">
+        <%= f.submit %>
+      </div>
+    </div>
   <% end %>
-  <div class="form-group-sm">
-    <%= f.label :name, nil, class:"col-sm-1 control-label" %>
-    <div class="col-sm-2">
-      <%= f.text_field :name, class:"form-control" %>
-    </div>
-  </div>
-  <div class="form-group-sm">
-    <%= f.label :qb_name, nil, class:"col-sm-1 control-label" %>
-    <div class="col-sm-2">
-      <%= f.text_field :qb_name, class:"form-control" %>
-    </div>
-  </div>
-  <div class="form-group-sm">
-    <%= f.label :billing_address1, nil, class:"col-sm-1 control-label" %>
-    <div class="col-sm-2">
-      <%= f.text_field :billing_address1, class:"form-control" %>
-    </div>
-  </div>
-  <div class="form-group-sm">
-    <%= f.label :billing_address2, nil, class:"col-sm-1 control-label" %>
-    <div class="col-sm-2">
-      <%= f.text_field :billing_address2, class:"form-control" %>
-    </div>
-  </div>
-  <div class="form-group-sm">
-    <%= f.label :billing_city, nil, class:"col-sm-1 control-label" %>
-    <div class="col-sm-2">
-      <%= f.text_field :billing_city, class:"form-control" %>
-    </div>
-  </div>
-  <div class="form-group-sm">
-    <%= f.label :billing_state, nil, class:"col-sm-1 control-label" %>
-    <div class="col-sm-2">
-      <%= f.text_field :billing_state, class:"form-control" %>
-    </div>
-  </div>
-  <div class="form-group-sm">
-    <%= f.label :billing_zip, nil, class:"col-sm-1 control-label" %>
-    <div class="col-sm-2">
-      <%= f.text_field :billing_zip, class:"form-control" %>
-    </div>
-  </div>
-  <div class="form-group-sm">
-    <%= f.label :billing_email, nil, class:"col-sm-1 control-label" %>
-    <div class="col-sm-2">
-      <%= f.text_field :billing_email, class:"form-control" %>
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="col-sm-offset-1">
-      <%= f.submit %>
-    </div>
-  </div>
-<% end %>
+  <% if @client.id %>
+    <%= render partial: 'tariffs', locals: {client: @client, newTariff: @tariff} %>
+  <% end %>
+</div>
