added location component, views and controller actions

--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -3,7 +3,7 @@
   <%= render partial: 'list' %>
   <br>
   <%= link_to "Edit client details", edit_client_path(@client) %>
-  <p class="col-3 justify-content-start">Name: <%= @client.name %></p>
+  <h4 class="col-3 justify-content-start">Name: <%= @client.name %></h4>
   <div class="row">
     <div class="col-3 justify-content-start border border-dark">
       <h4>Billing Information</h4>
