--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -16,7 +16,7 @@
       <div class="col-12 justify-content-start">
         <div class="form-group row col-md-12">
           <div class="col-md-12">
-            <%= f.label :name, nil, class:"col-md-12 control-label" %>
+            <%= f.label :name, value="Name (this will appear in dropdowns)", class:"col-md-12 control-label" %>
             <%= f.text_field :name, class:"form-control form-control-sm" %>
           </div>
         </div>
