--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active"><a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a></li>
+            <li class="nav-item active"><a class="nav-link" href="<%= root_url %>">Home <span class="sr-only">(current)</span></a></li>
             <% if logged_in? %>
               <li class="nav-item" id="dispatchNav" ><a class="nav-link" href="/dispatch">Dispatch</a></li>
               <li class="nav-item" id="shipmentNav" ><a class="nav-link" href="<%= shipments_path %>">Shipments</a></li>
