--- a/app/views/locations/new.html.erb
+++ b/app/views/locations/new.html.erb
@@ -1,4 +1,6 @@
 <%= javascript_include_tag 'locations' %>
-<%= render partial: 'list' %>
-<h4>Create a new location</h4>
-<%= render partial: 'form', locals: {location: @location} %>
+<div class="col-md-12">
+  <%= render partial: 'list' %>
+  <h4>Create a new location</h4>
+  <%= render partial: 'form', locals: {location: @location} %>
+</div>
