--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -1,4 +1,6 @@
 <%= javascript_include_tag 'clients' %>
-<%= render partial: 'list' %>
-<h2>Edit Client Details</h2>
-<%= render partial: 'form', locals: {client: @client} %>
+<div class="col-md-12">
+  <%= render partial: 'list' %>
+  <h2>Edit Client Details</h2>
+  <%= render partial: 'form', locals: {client: @client} %>
+</div>
