--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -12,14 +12,14 @@
       <br>
     <% end %>
     <div class="row col-md-12">
-      <div class="col-12 justify-content-start">
-        <div class="form-group row col-md-12">
-          <div class="col-md-12">
+      <div class="col-md-12 justify-content-start">
+        <div class="form-row">
+          <div class="form-group col-md-12">
             <%= f.label :company_name, value="Company Name (this appears in dropdowns)", class:"col-md-12 control-label" %>
             <%= f.text_field :company_name, class:"form-control form-control-sm" %>
           </div>
         </div>
-        <div class="form-group row col-md-12">
+        <div class="form-row">
           <div class="form-group col-md-7">
             <%= f.label :address1, value="Address", class:"col-md-7 control-label" %>
             <%= f.text_field :address1, class:"form-control form-control-sm" %>
@@ -29,7 +29,8 @@
             <%= f.text_field :address2, class:"form-control form-control-sm" %>
           </div>
         </div>
-      <div class="form-group row col-md-12">
+      </div>
+      <div class="form-row">
         <div class="form-group col-md-6">
           <%= f.label :city, value="City", class:"col-md-6 control-label" %>
           <%= f.text_field :city, class:"form-control form-control-sm" %>
@@ -42,7 +43,6 @@
           <%= f.label :zip, value="Zip", class:"col-md-3 control-label" %>
           <%= f.text_field :zip, class:"form-control form-control-sm" %>
         </div>
-      </div>
       </div>
     </div>
     <div class="form-group row col-md-1">
