--- a/app/views/locations/edit.html.erb
+++ b/app/views/locations/edit.html.erb
@@ -1,4 +1,6 @@
 <%= javascript_include_tag 'locations' %>
-<%= render partial: 'list' %>
-<h2>Edit Location Details</h2>
-<%= render partial: 'form', locals: {location: @location} %>
+<div class="col-md-12">
+  <%= render partial: 'list' %>
+  <h2>Edit Location Details</h2>
+  <%= render partial: 'form', locals: {location: @location} %>
+</div>
