--- a/app/views/clients/_tariffs.html.erb
+++ b/app/views/clients/_tariffs.html.erb
@@ -25,6 +25,6 @@
         <%= f.text_field :max, class:"form-control form-control-sm" %>
       </div>
     </div>
-    <%= f.submit data: { disable_with: false }, id:"newTariff" %>
+    <%= f.submit data: { disable_with: false } %>
   <% end %>
 </div>
