Upgraded Shipment Edit page. Changes on page send AJAX to save data, added section per stop to add items and button to remove individual items

--- a/app/views/shipments/_form.html.erb
+++ b/app/views/shipments/_form.html.erb
@@ -81,12 +81,12 @@
           </div>
         </div>
       </div>
-      <!-- Charges/Costs Section -->
+      <!-- Costs Section -->
       <div class="card">
         <div class="card-header" id="headingChargeCostInfo">
           <h5 class="mb-0">
             <button class="btn btn-link" data-toggle="collapse" data-target="#collapseChargeCostInfo" aria-expanded="false" aria-controls="collapseChargeCostInfo">
-              Charges/Costs Info
+              Costs Info
             </button>
           </h5>
         </div>
