--- a/app/views/shipments/_stops.html.erb
+++ b/app/views/shipments/_stops.html.erb
@@ -7,8 +7,7 @@
       </div>
       <div class="form-group col-md-2">
         <label class="col-md-12 control-label">Office</label>
-        <select class="form-control form-control-sm" id="office-stop-<%=shipment_stop.id%>">
-          <option></option>
+        <select class="form-control form-control-sm" id="office-stop-<%=shipment_stop.stop_number%>">
           <% Office.all.each do |office| %>
             <option id="office-<%=office.id%>" <%= 'selected' if shipment_stop.office_id == office.id %>><%= office.name %></option>
           <% end %>
@@ -18,25 +17,25 @@
     <div class="row col-md-12">
       <div class="form-group col-md-auto">
         <label class="col-md-12 control-label">Start Date</label>
-        <input class="form-control form-control-sm" id="date-start-stop-<%=shipment_stop.id%>" type="date" value=<%= shipment_stop.stop_start %>>
+        <input class="form-control form-control-sm" id="date-start-stop-<%=shipment_stop.stop_number%>" type="date" value=<%= shipment_stop.stop_start %>>
       </div>
       <div class="form-group col-md-auto">
         <label class="col-md-12 control-label">Start Time</label>
-        <input class="form-control form-control-sm" id="date-start-time-stop-<%=shipment_stop.id%>" type="time" value=<%=  %>>
+        <input class="form-control form-control-sm" id="date-start-time-stop-<%=shipment_stop.stop_number%>" type="time" value=<%= timeChanger(shipment_stop.stop_start_time) %>>
       </div>
       <div class="form-group col-md-auto">
         <label class="col-md-12 control-label">End Date</label>
-        <input class="form-control form-control-sm" id="date-end-stop-<%=shipment_stop.id%>" type="date" value=<%= shipment_stop.stop_end %>>
+        <input class="form-control form-control-sm" id="date-end-stop-<%=shipment_stop.stop_number%>" type="date" value=<%= shipment_stop.stop_end %>>
       </div>
       <div class="form-group col-md-auto">
         <label class="col-md-12 control-label">End Time</label>
-        <input class="form-control form-control-sm" id="date-end-time-stop-<%=shipment_stop.id%>" type="time" value=<%=  %>>
+        <input class="form-control form-control-sm" id="date-end-time-stop-<%=shipment_stop.stop_number%>" type="time" value=<%= timeChanger(shipment_stop.stop_end_time) %>>
       </div>
     </div>
     <div class="row col-md-12">
       <div class="form-group col-md-4">
         <label class="col-md-12 control-label">Location</label>
-        <select class="form-control form-control-sm" id="location-stop-<%=shipment_stop.id%>">
+        <select class="form-control form-control-sm" id="location-stop-<%=shipment_stop.stop_number%>">
           <option></option>
           <% Location.all.each do |location| %>
             <option id="location-<%=location.id%>" <%= 'selected' if shipment_stop.location_id == location.id %>><%= location.company_name %></option>
@@ -45,34 +44,34 @@
       </div>
       <div class="form-group col-md-2">
         <label class="col-md-12 control-label">Contact</label>
-        <select class="form-control form-control-sm" id="contact-stop-<%shipment_stop.id%>">
+        <select class="form-control form-control-sm" id="contact-stop-<%=shipment_stop.stop_number%>">
           <option></option>
           <option>Contact Name</option>
         </select>
       </div>
       <div class="form-group col-md-2">
         <label class="col-md-12 control-label">Phone</label>
-        <input type="text" class="form-control form-control-sm" id="phone-stop-<%shipment_stop.id%>">
+        <input type="text" class="form-control form-control-sm" id="phone-stop-<%=shipment_stop.stop_number%>">
       </div>
       <div class="form-group col-md-2">
         <label class="col-md-12 control-label">Email</label>
-        <input type="text" class="form-control form-control-sm" id="email-stop-<%shipment_stop.id%>">
+        <input type="text" class="form-control form-control-sm" id="email-stop-<%=shipment_stop.stop_number%>">
       </div>
     </div>
     <div class="row col-md-12">
       <div class="form-group col-md-4">
-        <input type="text" class="form-control form-control-sm" id="address1-stop-<%=shipment_stop.id%>" value="<%= "#{shipment_stop.location.address1}" if shipment_stop.location_id %>">
+        <input type="text" class="form-control form-control-sm" id="address1-stop-<%=shipment_stop.stop_number%>" value="<%= "#{shipment_stop.location.address1}" if shipment_stop.location_id %>">
       </div>
       <div class="form-group col-md-3">
-        <input type="text" class="form-control form-control-sm" id="address2-stop-<%=shipment_stop.id%>" value="<%= "#{shipment_stop.location.address2}" if shipment_stop.location_id %>">
+        <input type="text" class="form-control form-control-sm" id="address2-stop-<%=shipment_stop.stop_number%>" value="<%= "#{shipment_stop.location.address2}" if shipment_stop.location_id %>">
       </div>
     </div>
     <div class="row col-md-12">
       <div class="form-group col-md-3">
-        <input type="text" class="form-control form-control-sm" id="city-stop-<%=shipment_stop.id%>" value="<%= "#{shipment_stop.location.city}" if shipment_stop.location_id %>">
+        <input type="text" class="form-control form-control-sm" id="city-stop-<%=shipment_stop.stop_number%>" value="<%= "#{shipment_stop.location.city}" if shipment_stop.location_id %>">
       </div>
       <div class="form-group col-md-2">
-        <select class="form-control form-control-sm" id="state-stop-<%=shipment_stop.id%>">
+        <select class="form-control form-control-sm" id="state-stop-<%=shipment_stop.stop_number%>">
           <option></option>
           <% Location::STATES.each do |state| %>
             <option <%= 'selected' if shipment_stop.location_id && shipment_stop.location.state == state %>><%= state %></option>
@@ -80,7 +79,7 @@
         </select>
       </div>
       <div class="form-group col-md-2">
-        <input type="text" class="form-control form-control-sm" id="zip-stop-<%=shipment_stop.id%>" value="<%= "#{shipment_stop.location.zip}" if shipment_stop.location_id %>">
+        <input type="text" class="form-control form-control-sm" id="zip-stop-<%=shipment_stop.stop_number%>" value="<%= "#{shipment_stop.location.zip}" if shipment_stop.location_id %>">
       </div>
     </div>
   </div>
@@ -88,7 +87,7 @@
     <div class="row col-md-12">
       <div class="form-group col-md-auto">
         <label class="col-md-12 control-label">Stop Status</label>
-        <select id="status-stop-<%=shipment_stop.id%>" class="form-control form-control-sm">
+        <select id="status-stop-<%=shipment_stop.stop_number%>" class="form-control form-control-sm">
           <% ShipmentStop::STOPSTATUS.each do |status| %>
             <option <%= 'selected' if shipment_stop.stop_status == status %>><%= status %></option>
           <% end %>
@@ -96,25 +95,25 @@
       </div>
       <div class="form-group col-md-auto">
         <label class="col-md-12 control-label">Arrival Date</label>
-        <input class="form-control form-control-sm" id="date-arrival-stop-<%=shipment_stop.id%>" type="date" value=<%= shipment_stop.stop_arrival %>>
+        <input class="form-control form-control-sm" id="date-arrival-stop-<%=shipment_stop.stop_number%>" type="date" value=<%= shipment_stop.stop_arrival %>>
       </div>
       <div class="form-group col-md-auto">
         <label class="col-md-12 control-label">Arrival Time</label>
-        <input class="form-control form-control-sm" id="date-arrival-time-stop-<%=shipment_stop.id%>" type="time" value=<%=  %>>
+        <input class="form-control form-control-sm" id="date-arrival-time-stop-<%=shipment_stop.stop_number%>" type="time" value=<%= timeChanger(shipment_stop.stop_arrival_time)  %>>
       </div>
       <div class="form-group col-md-auto">
         <label class="col-md-12 control-label">Departure Date</label>
-        <input class="form-control form-control-sm" id="date-departure-stop-<%=shipment_stop.id%>" type="date" value=<%= shipment_stop.stop_departure %>>
+        <input class="form-control form-control-sm" id="date-departure-stop-<%=shipment_stop.stop_number%>" type="date" value=<%= shipment_stop.stop_departure %>>
       </div>
       <div class="form-group col-md-auto">
         <label class="col-md-12 control-label">Departure Time</label>
-        <input class="form-control form-control-sm" id="date-departure-time-stop-<%=shipment_stop.id%>" type="time" value=<%=  %>>
+        <input class="form-control form-control-sm" id="date-departure-time-stop-<%=shipment_stop.stop_number%>" type="time" value=<%= timeChanger(shipment_stop.stop_departure_time) %>>
       </div>
     </div>
     <div class="row col-md-12">
       <div class="form-group col-md-auto">
         <label class="col-md-12 control-label">Driver</label>
-        <select class="form-control form-control-sm" id="driver-stop-<%=shipment_stop.id%>">
+        <select class="form-control form-control-sm" id="driver-stop-<%=shipment_stop.stop_number%>">
           <option></option>
           <% current_office.drivers.each do |driver| %>
             <option id="driver-<%=driver.id%>" <%= 'selected' if shipment_stop.driver_id == driver.id %>><%= driver.name %></option>
@@ -123,7 +122,7 @@
       </div>
       <div class="form-group col-md-auto">
         <label class="col-md-12 control-label">Vehicle</label>
-        <select class="form-control form-control-sm" id="vehicle-stop-<%=shipment_stop.id%>">
+        <select class="form-control form-control-sm" id="vehicle-stop-<%=shipment_stop.stop_number%>">
           <option></option>
           <% current_office.vehicles.each do |vehicle| %>
             <option id="vehicle-<%=vehicle.id%>" <%= 'selected' if shipment_stop.vehicle_id == vehicle.id %>><%= vehicle.vehicle_number %></option>
@@ -132,13 +131,45 @@
       </div>
       <div class="form-group col-md-auto">
         <label class="col-md-12 control-label">Trailer</label>
-        <select class="form-control form-control-sm" id="trailer-stop-<%=shipment_stop.id%>">
+        <select class="form-control form-control-sm" id="trailer-stop-<%=shipment_stop.stop_number%>">
           <option></option>
           <% current_office.trailers.each do |trailer| %>
             <option id="trailer-<%=trailer.id%>" <%= 'selected' if shipment_stop.trailer_id == trailer.id %>><%= trailer.trailer_number %></option>
           <% end %>
         </select>
       </div>
+    </div>
+    <div class="row col-md-12 mb-2">
+      <div class="form-row col-md-12">
+        <div class="col-md-1"><label class="control-label">Type</label></div>
+        <div class="col-md-1"><label class="control-label">Qty</label></div>
+        <div class="col-md-1"><label class="control-label">Weight</label></div>
+        <div class="col-md-7"><label class="control-label">Description</label></div>
+      </div>
+      <table class="table table-sm">
+        <tbody id="items-stop-<%= shipment_stop.id %>">
+          <% shipment_stop.shipment_stop_items.each do |item| %>
+            <tr>
+              <td><%= item.item_type %></td>
+              <td><%= item.quantity ? item.quantity : ' ' %></td>
+              <td><%= item.weight ? item.weight : ' ' %></td>
+              <td><%= item.description %></td>
+              <td><button type="button" class="btn btn-danger btn-sm" id="remove-item-<%= item.id %>">Remove Item</button></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+          <div class="form-row col-md-12">
+            <select class="col-md-1" id="add-item-type-stop-<%= shipment_stop.stop_number %>">
+                      <option>Pallet</option>
+                      <option>Box</option>
+                      <option>Unit</option>
+            </select>
+            <div class="col-md-1"><input type="text" class="form-control form-control-sm" id="add-item-quantity-stop-<%= shipment_stop.stop_number %>"></div>
+            <div class="col-md-1"><input type="text" class="form-control form-control-sm" id="add-item-weight-stop-<%= shipment_stop.stop_number %>"></div>
+            <div class="col-md-7"><input type="text" class="form-control form-control-sm" id="add-item-description-stop-<%= shipment_stop.stop_number %>"></div>
+            <button type="button" class="btn btn-success btn-sm" id="add-item-stop-<%= shipment_stop.stop_number %>">Add Item</button>
+          </div>
     </div>
   </div>
 </div>
