--- a/app/views/shipments/_form.html.erb
+++ b/app/views/shipments/_form.html.erb
@@ -45,6 +45,7 @@
                 <% end %>
               </div>
               <div class="form-group col-md-1">
+                <input type="text" value="<%= @shipment_item_count %>" class="form-control form-control-sm" id="shipment_item_count">
               </div>
               <div class="form-group col-md-1.75">
                 <%= f.label :shipment_status, nil, class:"col-md-12 control-label" %>
