--- a/app/views/trailers/show.html.erb
+++ b/app/views/trailers/show.html.erb
@@ -16,6 +16,7 @@
         <table class="table table-striped table-sm">
           <thead class="thead-dark">
             <tr>
+              <th scope="col">Office</th>
               <th scope="col">Rental Start</th>
               <th scope="col">Rental End</th>
             </tr>
@@ -23,6 +24,7 @@
           <tbody>
             <% @trailer.trailer_rentals.each do |rental| %>
             <tr>
+              <td><%= rental.office.name %></td>
               <td><%= rental.start_date ? beginning_date(rental) : '' %></td>
               <td><%= rental.end_date ? ending_date(rental) : '' %></td>
             </tr>
