--- a/app/views/vehicles/show.html.erb
+++ b/app/views/vehicles/show.html.erb
@@ -15,6 +15,7 @@
         <table class="table table-striped table-sm">
           <thead class="thead-dark">
             <tr>
+              <th scope="col">Office</th>
               <th scope="col">Rental Start</th>
               <th scope="col">Rental End</th>
             </tr>
@@ -22,6 +23,7 @@
           <tbody>
             <% @vehicle.vehicle_rentals.each do |rental| %>
             <tr>
+              <td><%= rental.office.name %></td>
               <td><%= rental.start_date ? beginning_date(rental) : '' %></td>
               <td><%= rental.end_date ? ending_date(rental) : '' %></td>
             </tr>
