--- a/app/views/shipments/_form.html.erb
+++ b/app/views/shipments/_form.html.erb
@@ -31,21 +31,21 @@
                 <%= f.text_field :reference, class:"form-control form-control-sm" %>
               </div>
               <div class="form-group col-md-2">
-                <% if shipment.client %>
                   <%= f.label :tariff, nil, class:"col-md-12 control-label"%>
                   <select class="form-control form-control-sm" id="shipment_tariff">
                     <option></option>
+                  <% if shipment.client %>
                     <% shipment.client.tariffs.each do |tariff| %>
                       <option id="tariff-<%= tariff.id %>" <%= 'selected' if shipment.shipment_tariff.tariff_id == tariff.id %>><%= tariff.name %></option>
                     <% end %>
+                  <% end %>
                   </select>
-                    <input type="hidden" value="<%= shipment.shipment_tariff.tariff_id ? shipment.tariff.rate : '' %>" id="tariff-rate">
-                    <input type="hidden" value="<%= shipment.shipment_tariff.tariff_id ? shipment.tariff.min : '' %>" id="tariff-min">
-                    <input type="hidden" value="<%= shipment.shipment_tariff.tariff_id ? shipment.tariff.max : '' %>" id="tariff-max">
-                <% end %>
+                    <input type="hidden" value="<%= (shipment.shipment_tariff && shipment.shipment_tariff.tariff_id) ? shipment.tariff.rate : '' %>" id="tariff-rate">
+                    <input type="hidden" value="<%= (shipment.shipment_tariff && shipment.shipment_tariff.tariff_id) ? shipment.tariff.min : '' %>" id="tariff-min">
+                    <input type="hidden" value="<%= (shipment.shipment_tariff && shipment.shipment_tariff.tariff_id) ? shipment.tariff.max : '' %>" id="tariff-max">
               </div>
               <div class="form-group col-md-1">
-                <input type="text" value="<%= @shipment_item_count %>" class="form-control form-control-sm" id="shipment_item_count">
+                <input type="hidden" value="<%= @shipment_item_count %>" class="form-control form-control-sm" id="shipment_item_count">
               </div>
               <div class="form-group col-md-1.75">
                 <%= f.label :shipment_status, nil, class:"col-md-12 control-label" %>
@@ -96,8 +96,58 @@
         </div>
         <div id="collapseChargeCostInfo" class="collapse" aria-labelledby="headingChargeCostInfo" data-parent="#accordion">
           <div class="card-body">
-            <div class="form-row">
-              Charges/Costs Info
+            <div class="form-row col-md-6">
+              <table class="table table-striped table-sm" id="shipment-charge-table">
+                <thead>
+                  <tr>
+                    <th style="width: 25%">Charge Type</th>
+                    <th style="width: 15%">Revenue</th>
+                    <th style="width: 15%">Cost</th>
+                    <th style="width: 25%">Driver</th>
+                    <th style="width: 15%"></th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <% shipment.shipment_charges.each do |shipment_charge| %>
+                    <tr id="charge-<%= shipment_charge.id %>">
+                      <td><%= shipment_charge.charge_type %></td>
+                      <td><input type="text" value="<%= shipment_charge.amount %>" class="form-control form-control-sm"></td>
+                      <td><input type="text" value="<%= shipment_charge.cost %>" class="form-control form-control-sm"></td>
+                      <td><select class="form-control form-control-sm">
+                        <option></option>
+                        <% current_office.drivers.each do |driver| %>
+                          <option id="driver-<%=driver.id%>" <%= 'selected' if shipment_charge.driver_id == driver.id %>><%= driver.name %></option>
+                        <% end %>
+                      </select></td>
+                      <td></td>
+                    </tr>
+                  <% end %>
+                </tbody>
+              </table>
+            </div>
+            <div class="form-row col-md-6">
+              <div class="form-group col-md-3">
+                <select class="form-control form-control-sm">
+                  <option></option>
+                  <% @invoice_types.each do |invoice_type| %>
+                    <option><%= invoice_type %></option>
+                  <% end %>
+                </select>
+              </div>
+              
+              <div class="form-group col-md-2">
+                <input type="text" class="form-control form-control-sm">
+              </div>
+              <div class="form-group col-md-2">
+                <input type="text" class="form-control form-control-sm">
+              </div>
+              <select class="form-control form-control-sm col-md-3">
+                <option></option>
+                <% current_office.drivers.each do |driver| %>
+                  <option id="driver-<%=driver.id%>"><%= driver.name %></option>
+                <% end %>
+              </select>
+              <button type="button" class="btn btn-success btn-sm" id="add-charge">Add Charge</button>
             </div>
           </div>
         </div>
@@ -113,8 +163,47 @@
         </div>
         <div id="collapseInvoiceInfo" class="collapse" aria-labelledby="headingInvoiceInfo" data-parent="#accordion">
           <div class="card-body">
-            <div class="form-row">
-              Invoicing Info
+            <div class="form-row col-md-4">
+              <table class="table table-striped table-sm" id="shipment-invoice-table">
+                <thead>
+                  <tr>
+                    <th style="width: 25%">Charge Type</th>
+                    <th style="width: 20%">Quantity</th>
+                    <th style="width: 25%">Revenue</th>
+                    <th style="width: 30%"></th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <% shipment.shipment_invoices.each do |shipment_invoice| %>
+                    <tr id="invoice-<%= shipment_invoice.id %>">
+                      <td><%= shipment_invoice.charge_type %></td>
+                      <td><input type="text" value="<%= shipment_invoice.quantity %>" class="form-control form-control-sm col-md-6"></td>
+                      <td><input type="text" value="<%= shipment_invoice.revenue %>" class="form-control form-control-sm"></td>
+                      <td></td>
+                    </tr>
+                  <% end %>
+                </tbody>
+              </table>
+            </div>
+            <div class="form-row col-md-4">
+              <div class="form-group col-md-3">
+                <select class="form-control form-control-sm">
+                  <option></option>
+                  <% @invoice_types.each do |invoice_type| %>
+                    <option><%= invoice_type %></option>
+                  <% end %>
+                </select>
+              </div>
+              
+              <div class="form-group col-md-1">
+                <input type="text" class="form-control form-control-sm">
+              </div>
+              <div class="form-group col-md-1">
+              </div>
+              <div class="form-group col-md-3">
+                <input type="text" class="form-control form-control-sm">
+              </div>
+              <button type="button" class="btn btn-success btn-sm" id="add-invoice">Add Charge</button>
             </div>
           </div>
         </div>
